--- a/try1.css
+++ b/try1.css
@@ -77,28 +77,24 @@ to {background-position: -100px 0px;background-size:2750px;}
 
 
   .video-container video {
-    /* position: absolute;
-    top: 50%;
-    left: 100%; */
-    /* transform: translate(-50%, -50%); */
-    width: 380px;
-    height: 550px;
+    width: 600px;
+    height: 800px;
     z-index: -1;
-    border-top-left-radius: 20% 20%;
-    border-bottom-left-radius: 20% 20%;
-    border-top-right-radius: 20% 20%;
-    border-bottom-right-radius: 20% 20%;
+    margin: 0;
   }
   
   .video-container {
     position: absolute;
-    top: 170px;
-    left: 550px;
-    width: 380px;
-    height: 550px;
+    top: 120px;
+    left: 700px;
+    width: 550px;
+    height: 800px;
     overflow: hidden;
-    /* border-top-left-radius: 50% 50%;
-    border-bottom-left-radius: 50% 50%; */
+    border-top-left-radius: 30% ;
+    border-bottom-left-radius: 20% ;
+    border-top-right-radius: 20% ;
+    border-bottom-right-radius: 20% ;
+
   }
   
 
@@ -125,10 +121,10 @@ form p {
 #form-container{
     position: relative;
     width: 550px;
-    height: 1100px;
-    margin-left: 470px;
+    height: 900px;
+    left: 50%;
     padding: 100px;
-    margin-top: 130px;
+    top: 50px;
     box-shadow: 0px 50px 30px -30px rgba(67, 67, 67, 0.29);
     background: radial-gradient(#00000015, #00000024);
     background-color: rgb(222, 213, 213,0.5);
@@ -152,3 +148,10 @@ form p {
 .checkB{
     margin-right: 200px;
 }
+
+form span{
+    display: none;
+    margin-left: 10px;
+    color: red;
+    font-weight: bold;
+  }
