--- a/css/style2.css
+++ b/css/style2.css
@@ -7,22 +7,14 @@
 }
 
 body {
-  background: radial-gradient(#f4f6f6, #c0e5ec);
+  background: radial-gradient(#ffffff, #d6d6d6);
 }
-
-/* .container {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-} */
 
 h1, h2 {
   position: relative;
   text-align: center;
   left: 300px;
   margin: 40px 0;
-  background-color: #ffffff;
   width: 70%;
   border-radius: 5px;
 }
@@ -32,7 +24,6 @@ form {
   top: 70px;
   position: relative;
   max-width: 500px;
-  /* margin: 0 auto; */
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
@@ -75,7 +66,6 @@ form input[type="radio"]{
   margin-bottom: 20px;
   border: none;
   border-radius: 5px;
-  /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); */
 }
 
 @media (min-width: 768px) {
@@ -110,5 +100,5 @@ form input[type="radio"]{
   border-color: rgb(179, 177, 177);
   border-style: solid;
   border-width: 1px;
-  background-image: url('https://t3.ftcdn.net/jpg/02/64/92/28/360_F_264922838_NErJEovZiP9MTa49apqL1Vs3f88ZT8Dg.jpg');
+  background-color: #fff;
 }
